[package]
name = "sandwich"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
ethers = {version = "1.0.2", features = ["ws", "openssl"]}
dotenv = "0.15.0"
tokio = {version = "1.20.1", features = ["rt", "macros", "full"]}
eyre = "0.6.8"
ethabi = "18.0.0"
